<resources>
    <string name="app_name">微信</string>
    <string name="canel">取消</string>
    <string name="register">注册</string>
    <string name="accountNumber">账号</string>
    <string name="number">微信号/手机号/QQ号</string>
    <string name="password">密码</string>
    <string name="writePassword">请填写密码</string>
    <string name="readPwd">记住密码</string>
    <string name="login">登陆</string>
    <string name="registered">注册</string>
    <string name="yourName">请填写用户名</string>
    <string name="yhm">用户名</string>
    <string name="send">发送</string>
    <string name="title_activity_friend">FriendActivity</string>
    <string name="title_activity_friend_msg">FriendMsgActivity</string>
</resources>
