<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <!--android:background="@android:color/transparent"背景透明-->
    <Button
        android:id="@+id/btn_canel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:background="@android:color/transparent"
        android:gravity="left"
        android:text="@string/canel"
        android:textAllCaps="false"
        android:textColor="#08C70F"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40sp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#000"
        android:textSize="28sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8sp"
        android:paddingTop="8sp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_weight="1"
            android:ems="3"
            android:text="@string/accountNumber"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_reg_WeChat_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@null"
            android:hint="@string/number"
            android:textSize="18sp" />
    </LinearLayout>

    <!--添加分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15sp"
        android:background="#33000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8sp"
        android:paddingTop="8sp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_weight="1"
            android:ems="3"
            android:text="@string/password"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.example.mywechat.util.PasswordEditText
            android:id="@+id/edt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@null"
            android:hint="@string/writePassword"
            android:textSize="18sp" />

    </LinearLayout>
    <!--添加分割线-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15sp"
        android:background="#33000000" />

    <CheckBox
        android:id="@+id/chk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:layout_marginLeft="14sp"
        android:layout_marginTop="15sp"
        android:enabled="true"
        android:paddingLeft="70dp"
        android:text="@string/readPwd"
        android:textSize="15sp" />
    <!--android:paddingLeft="66sp"设置文字与图片的间距-->
    <Button
        android:id="@+id/btn_shape"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:layout_gravity="center"
        android:background="@drawable/shape"
        android:ems="18"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#FFF"
        android:textSize="18sp" />
    <!--android:background="@null"隐藏下划线-->
</LinearLayout>